scaling/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fact-service
  namespace: facts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fact-service
  template:
    metadata:
      labels:
        app: fact-service
    spec:
      serviceAccountName: facts-sa
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: fact-service
          image: fact-service-k8s
          resources:
            requests:
              cpu: "0.5"
              memory: "1Gi"
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /actuator/health/readiness
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /actuator/health/liveness
              port: 8080
        - name: pgadapter
          image: gcr.io/cloud-spanner-pg-adapter/pgadapter
          ports:
            - containerPort: 5432
          args:
            - "-p skillsmapper-org"
            - "-i facts-instance"
            - "-d facts"
            - "-x"
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
