scaling/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fact-service-ingress
  namespace: facts
spec:
  defaultBackend:
    service:
      name: fact-service
      port:
        number: 8080
